<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.piroworkz.architectcoders.domain.PaymentMethod" />

        <import type="kotlin.jvm.functions.Function0" />

        <import type="kotlin.Unit" />

        <import type="com.piroworkz.architectcoders.domain.TextInputError" />

        <variable
            name="viewModel"
            type="com.piroworkz.architectcoders.app.ui.profile.payment.PaymentMethodViewModel" />

        <variable
            name="savePaymentMethod"
            type="Function0&lt;Unit>" />

        <variable
            name="expirationDate"
            type="String" />

        <variable
            name="error"
            type="com.piroworkz.architectcoders.domain.TextInputError" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_draggable="false"
        app:behavior_hideable="false"
        app:behavior_saveFlags="all"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/shipping_address_title" />

        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:orientation="vertical"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="@string/card_holder"
                android:maxLines="1"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cardHolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionLabel="@string/card_holder"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    app:addTextChangedListener="@{viewModel}"
                    app:onError="@{error}"
                    app:setOnFocusChangeListener="@{viewModel}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="@string/card_issuer"
                android:labelFor="@+id/cardIssuer"
                android:maxLines="1"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cardIssuer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    app:addTextChangedListener="@{viewModel}"
                    app:onError="@{error}"
                    app:setOnFocusChangeListener="@{viewModel}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="@string/card_expiration"
                android:labelFor="@+id/cardExpiration"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cardExpiration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="date"
                    android:maxLength="5"
                    android:maxLines="1"
                    app:addTextChangedListener="@{viewModel}"
                    app:formatExpiration="@{expirationDate}"
                    app:onError="@{error}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="@string/card_number"
                android:labelFor="@+id/cardNumber"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="16"
                    android:maxLines="1"
                    app:addTextChangedListener="@{viewModel}"
                    app:onError="@{error}"
                    app:setOnFocusChangeListener="@{viewModel}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="@string/card_cvc"
                android:labelFor="@+id/cardNumber"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cardCvc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionSend"
                    android:inputType="numberPassword"
                    android:maxLength="3"
                    android:maxLines="1"
                    app:addTextChangedListener="@{viewModel}"
                    app:onError="@{error}"
                    app:setOnFocusChangeListener="@{viewModel}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="8dp"
                android:onClick="@{()-> savePaymentMethod.invoke()}"
                android:text="@string/save" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>