<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="loading"
            type="Boolean" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{loading ? View.VISIBLE : View.GONE}">

            <ImageView
                android:id="@+id/spiral"
                android:layout_width="900dp"
                android:layout_height="900dp"
                android:contentDescription="@string/spiral"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/spiral" />

            <ImageView
                android:id="@+id/circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/background_circle"
                app:layout_constraintBottom_toBottomOf="@id/pwLogo"
                app:layout_constraintEnd_toEndOf="@id/pwLogo"
                app:layout_constraintStart_toStartOf="@id/pwLogo"
                app:layout_constraintTop_toTopOf="@id/pwLogo"
                app:srcCompat="@drawable/circle" />

            <ImageView
                android:id="@+id/pwLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/piroworkz_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loadingMerch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:progressTint="@color/primary"
            android:visibility="@{loading ? View.GONE : View.VISIBLE}" />

    </FrameLayout>
</layout>
