<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="java.util.List" />

        <import type="com.piroworkz.architectcoders.domain.CartItem" />

        <import type="android.view.View" />

        <variable
            name="shoppingCart"
            type="List&lt;CartItem>" />

        <variable
            name="total"
            type="Integer" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".app.ui.shopping_cart.ShoppingCartFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/shopping_cart_title"
                app:menu="@menu/menu_favorites"
                app:navigationIcon="@drawable/ic_arrow_back_24" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <FrameLayout
                android:id="@+id/layoutFrame"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/totalTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/shoppingCartRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:list="@{shoppingCart}"
                    tools:listitem="@layout/shopping_cart_item" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/loadingProductsProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:progressTint="@color/primary"
                    android:visibility="@{shoppingCart == null ? View.VISIBLE : View.GONE}" />

                <TextView
                    android:id="@+id/emptySign"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/cart_is_empty"
                    android:visibility="@{shoppingCart != null &amp;&amp; shoppingCart.size == 0 ? View.VISIBLE : View.GONE}" />

            </FrameLayout>

            <TextView
                android:id="@+id/totalTextView"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/total(total.toString())}"
                android:visibility="@{shoppingCart.size != 0 ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toTopOf="@id/checkoutButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias=".9"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/checkoutButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/checkout"
                android:visibility="@{shoppingCart.size != 0 ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>